Updated SVM Model.

--- a/Housing_Analysis_SVM_Model.ipynb
+++ b/Housing_Analysis_SVM_Model.ipynb
@@ -6,7 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from datetime import datetime as dt"
    ]
   },
   {
@@ -237,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +514,7 @@
        "max    27713.000000  2.141154e+09  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -523,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -542,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -551,7 +553,7 @@
        "290714.0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -575,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -780,7 +782,7 @@
        "[5 rows x 26 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -791,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -996,7 +998,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1011,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1021,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1226,7 +1228,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1240,54 +1242,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index(['@id', '@name', '@type', 'FIPScounty', 'bathrooms', 'bedrooms', 'city',\n",
-      "       'finishedSqFt', 'lastSoldDate', 'lastSoldPrice', 'latitude', 'links',\n",
-      "       'longitude', 'lotSizeSqFt', 'state', 'street', 'taxAssessment',\n",
-      "       'taxAssessmentYear', 'totalRooms', 'useCode', 'yearBuilt',\n",
-      "       'zindexValue', 'zipcode', 'zpid'],\n",
-      "      dtype='object')\n",
       "Index(['@type', 'bathrooms', 'bedrooms', 'finishedSqFt', 'latitude',\n",
-      "       'longitude', 'lotSizeSqFt', 'taxAssessment', 'totalRooms', 'yearBuilt',\n",
-      "       'zipcode'],\n",
+      "       'longitude', 'lotSizeSqFt', 'taxAssessment', 'totalRooms', 'yearBuilt'],\n",
       "      dtype='object')\n"
      ]
     }
    ],
    "source": [
     "###### Drop the additional columns, that we dont need for training.\n",
+    "###### Since we are dropping columns from DataFrame, make a copy of that dataframe before drop.\n",
     "\n",
-    "print(ml_house_prices.columns)\n",
+    "##print(ml_house_prices.columns)\n",
     "ml_house_prices_2 = ml_house_prices.copy()\n",
-    "ml_house_prices_2.drop([\"@id\", \"@name\", \"FIPScounty\", \"city\", \"lastSoldDate\", \"lastSoldPrice\", \"links\", 'state', 'street', 'taxAssessmentYear', 'useCode', 'zindexValue', 'zpid'], axis=1, inplace=True)\n",
+    "ml_house_prices_2.drop([\"@id\", \"@name\", \"FIPScounty\", \"city\", \"lastSoldDate\", \"lastSoldPrice\", \"links\", 'state', 'street', 'taxAssessmentYear', 'useCode', 'zindexValue', 'zipcode', 'zpid'], axis=1, inplace=True)\n",
+    "\n",
+    "####### Print a list of all columns in the dataframe.\n",
     "print(ml_house_prices_2.columns)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ml_house_prices_2[\"@type\"] = pd.Categorical(ml_house_prices_2[\"@type\"])\n",
+    "ml_house_prices_2[\"type-codes\"] = ml_house_prices_2[\"@type\"].cat.codes\n",
+    "ml_house_prices_2.drop(['@type'], axis = 1, inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
-    "X_train, X_test, y_train, y_test = train_test_split(ml_house_prices, target, random_state = 42)"
+    "X_train, X_test, y_train, y_test = train_test_split(ml_house_prices_2, target, random_state = 42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train = np.nan_to_num(X_train)\n",
+    "y_train = np.nan_to_num(y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model Fit activities started at 26-Oct-2019 11:53:27 PM\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Model Fit activities started at {dt.now().strftime('%d-%b-%Y %I:%M:%S %p')}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model fit activities started at 26-Oct-2019 11:53:28 PM\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\NandK\\Anaconda3\\lib\\site-packages\\sklearn\\svm\\base.py:196: FutureWarning: The default value of gamma will change from 'auto' to 'scale' in version 0.22 to account better for unscaled features. Set gamma explicitly to 'auto' or 'scale' to avoid this warning.\n",
+      "  \"avoid this warning.\", FutureWarning)\n"
+     ]
+    }
+   ],
    "source": [
+    "start_date_time = dt.now()\n",
+    "print(f\"Model fit activities started at {start_date_time.strftime('%d-%b-%Y %I:%M:%S %p')}\")\n",
     "from sklearn.svm import SVC\n",
-    "model = SVC(kernel = 'linear')\n",
-    "model.fit (X_train, y_train)"
+    "model = SVC(kernel = 'poly', random_state = 42)\n",
+    "model.fit (X_train, y_train)\n",
+    "end_date_time = dt.now()\n",
+    "print(f\"Model fit ended at {end_date_time.strftime('%d-%b-%Y %I:%M:%S %p')}\")"
    ]
   },
   {
